webtools-bridge : webdev, RoboCup Demo Version

--- a/src/plugins/webtools-bridge/webdev/WebMonitor/index.html
+++ b/src/plugins/webtools-bridge/webdev/WebMonitor/index.html
@@ -11,17 +11,18 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"   integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="   crossorigin="anonymous"></script>
  -->
 
+    <script src="./lib/jquery-2.2.3.min.js" ></script>
     <script src="./lib/three.js"></script>
     <script src="./lib/eventemitter2.min.js"></script>
     <script src="./lib/roslib.js"></script>
-    <script src="./lib/ros3d.min.js"></script>
-    <script src="./lib/jquery-2.2.3.min.js" ></script>
+<script src="./lib/ros3d.js"></script>
 
 
 
     <link rel="stylesheet" type="text/css" href="styles.css">
     
     <script src="load.js"></script>
+    <script src="game_info.js"></script>
     <script src="map.js"></script>
     <script src="wedgits.js"></script>    
     <script src="exploration-results.js"></script>
@@ -32,6 +33,7 @@
 
 
   <body onload="connect()">
+    <img id="trash" >  </img >
 
   </body>
 
